Closed
Bug 188088
Opened 22 years ago
Closed 22 years ago
content area is not focused if chimera is in the background when page finishes loading
Categories
(Camino Graveyard :: Page Layout, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino1.0
People
(Reporter: bryner, Assigned: bryner)
Details
Attachments
(1 file, 1 obsolete file)
2.67 KB,
patch
|
Details | Diff | Splinter Review |
1. Start loading a page
2. Switch to another app
3. Wait for the page to finish loading
4. Switch back to Chimera
5. hit down-arrow
Expected result: the page scrolls down
Actual result: it beeps at you, because the page isn't focused.
Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → Chimera1.0
Assignee | ||
Comment 1•22 years ago
|
||
chimera isn't setting gecko to be the first responder if the load finishes
while the window is unfocused, so when it does get focused, Activate isn't
called on the nsWebBrowser. I think if we do it this way, there's no need for
the ugly focus controller hack.
Assignee | ||
Updated•22 years ago
|
Attachment #111376 -
Flags: review?(pinkerton)
Comment 2•22 years ago
|
||
Comment on attachment 111376 [details] [diff] [review]
patch
if you have two windows open, load a page into one and switch windows while
it's loading, when the page finishes, it will pop to the front.
bad :(
i think we have to leave it as is.
Attachment #111376 -
Flags: review?(pinkerton) → review-
Assignee | ||
Comment 3•22 years ago
|
||
don't make focusChangedFrom:To: activate the web browser if the window isn't
focused
Attachment #111376 -
Attachment is obsolete: true
Assignee | ||
Updated•22 years ago
|
Attachment #111550 -
Flags: review?(pinkerton)
Comment 4•22 years ago
|
||
landed 2nd patch, with a cleanup of the patch to not set the focus if the user
has typed in the urlbar.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•22 years ago
|
QA Contact: winnie → sairuh
Assignee | ||
Updated•22 years ago
|
Attachment #111550 -
Flags: review?(pinkerton)
Comment 5•22 years ago
|
||
Verified with latest builds, this appears to be fixed.
Comment 6•22 years ago
|
||
vrfy'd fixed using 2003.02.06.15 on 10.2.3. tested both mouse and keyboard
shortcuts to switch btwn another app and chimera.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•