make sure content area is focused if chimera is in the bg while page finishes loading (but doesn't if you've typed in url bar). (bug 188088 for bryner)